[tool.poetry]
name = "comfyui-api"
version = "0.1.0"
description = ""
authors = ["Sneh Pushp <pushp1999satyam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
